# backend-fastapi

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  sonar-project.properties  sql_app.db  tox.ini
.github/workflows/: build.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 0721676060d6_update_user_model.py  219b905a9cd4_.py  24ba0d8998ad_init_db.py  3a6d19a95c40_init.py  42bb96ef17b7_add_item_desc.py  517a245b1ee5_fix_mysql_enum.py  618675595c71_.py  629a2bd5720a_add_last_password_change_to_user.py  657109786827_add_enum_type.py  8783677694f7_.py  a8b747ee6eb9_update_username.py  b0a4761741b9_add_github_oauth.py  b5f7dc6a1c3b_update_enum.py  c812126788f6_fix_enum.py  dd3a961c0c66_create_tag.py  eb683b9a632a_init_db.py  f49bc2c858df_add_file_table.py  fc6f879c931c_add_file_table.py  ffd171e13186_update_credential_type.py
app/api/: deps.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  users.py
app/api/routes/: file.py  items.py  login.py  users.py
app/core/: config.py  db.py  security.py
app/filters/: item.py
app/models/: __init__.py  file.py  item.py  user.py
app/schemas/: __init__.py  file.py  item.py  token.py  user.py
app/services/: file.py  item.py  login.py  user.py
app/tasks/: task.py
app/tests/: conftest.py
app/tests/api/: test_items.py  test_users.py
app/tests/api/api_v1/: test_users.py
app/tests/utils/: user.py  utils.py
sql/: migration.sql
