[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt==4.0.1",
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.115.6,<1.0.0",
    "fastapi-pagination>=0.12.34",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.7.1",
    "pydantic[email]>=2.10.5",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "fastapi-filter[sqlalchemy]>=2.0.1",
    "pymysql>=1.1.1",
]
[tool.mypy]
strict = true
exclude = ["venv", ".venv", "app/alembic"]

[dependency-groups]
dev = [
    "faker>=37.3.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "types-passlib>=1.7.7.20250602",
]
